--- a/Server/src/containers/System/products/product.scss
+++ b/Server/src/containers/System/products/product.scss
@@ -54,24 +54,24 @@ tr{
             }
         }
     }
-    .sale{
+    // .sale{
         
-    }
-    .danhMuc{
+    // }
+    // .danhMuc{
 
-    }
-    .hangSX{
+    // }
+    // .hangSX{
 
-    }
-    .gia{
+    // }
+    // .gia{
 
-    }
-    .soLuong{
+    // }
+    // .soLuong{
 
-    }
-    .luotXem{
+    // }
+    // .luotXem{
 
-    }
+    // }
     
 }
 @media screen and (max-width: 768px){
