--- a/Server/src/styles/_variables.scss
+++ b/Server/src/styles/_variables.scss
@@ -1,10 +1,10 @@
 $base-size: 16px;
 $lh: 1.313;
 $fontmain:"Helvetica", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-$colormain:#0071ba;
+$colormain:#00C087;
 $colorsub:#bb8d09;
 $common-text-color:white;
-$common-btn-confirm: #185ba8;
+$common-btn-confirm: #0a0e11;
 $common-btn-deny: #bb8d09;
 $common-error: #ff9600;
 $common-notify: greenyellow;
@@ -18,7 +18,7 @@ $text-in-light: #181818;
 $input-focus: #FFAC42;
 
 $footer-container: #f5f5f5;
-$footer-text: #262626;
+$footer-text: #0f0b0b;
 $footer-next-disable: #ccc;
 
 $bg-menu-color: #f5f5f5;
